# tapl

./: .gitignore  README.md  tapl.cabal
app/: Main.hs
app/Arith/: Exercises.hs  Interpreter.hs  Parser.hs  Syntax.hs
app/Arith/Eval/: SmallStep.hs
app/Common/: Parser.hs
app/Effectful/: Interpreter.hs  Parser.hs  Syntax.hs  Typecheck.hs
app/Effectful/Eval/: Nameless.hs  SmallStep.hs
app/Exercise/: UntypedArithmeticExpressions.hs
app/NamelessRep/: Exercises.hs
app/TypedArith/: Interpreter.hs  Parser.hs  Syntax.hs  Typecheck.hs
app/TypedArith/Eval/: SmallStep.hs
app/TypedLC/: Interpreter.hs  Parser.hs  Syntax.hs  Typecheck.hs
app/TypedLC/Eval/: Nameless.hs  SmallStep.hs
app/UntypedLC/: Exercises.hs  Parser.hs  Syntax.hs
app/UntypedLC/Eval/: SmallStep.hs
notes/: mathematical_preliminaries.md  nameless_representation_of_terms.md  simply_typed_lambda_calculus.md  typed_arithmetic_expressions.md  untyped_arithmetic_expressions.md  untyped_lambda_calculus.md
src/arith/: arith
src/effectful/: r2r  references
src/typed/: ascription  atom  bool  let  list  record  seq  tuple
src/typed_arith/: arith
