cabal-version:      2.4
name:               tapl
version:            0.1.0.0

author:             dbnor0
maintainer:         dbnor0@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable tapl
    main-is:          Main.hs
    other-modules:
        Arith.Eval.SmallStep
        Arith.Exercises
        Arith.Interpreter
        Arith.Parser
        Arith.Syntax
        NamelessRep.Exercises
        UntypedLC.Exercises
        Common.Parser
    build-depends:    
        base ^>=4.16.4.0
        , containers
        , directory
        , megaparsec
        , mtl
        , text
    hs-source-dirs:   app
    default-language: Haskell2010
